# Data-Platform-Copilot

./: .env.example  .env.example.yaml  .gitignore  Dockerfile.api  README.md  SETTINGS_DOCUMENTATION.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  query.http  requirements.txt  server.py
api/: Dockerfile
api/app/: requirements.txt
data/: customers.csv  items.csv  orders.csv
db/: init_duckdb.py  schema_docs.md
demo_data/: items.csv  orders.csv
flows/: daily_sales.py  prefect.yaml
infra/: Dockerfile.api
infrastructure/: Dockerfile.prefect-worker
models/: mart_user_retention.sql  schema.yml
src/: chain.py  config.py  constants.py  dbt_generator.py  demo_seed.py  dq.py  github_client.py  io_utils.py  lifespan.py  main.py  metrics.py  orchestrator.py  provider.py  routes.py  schema_docs.py  schema_introspect.py  settings.py  sql_runner.py  utils.py
src/agent/: chain.py  prompt.py
src/app/: entrypoint.sh  main.py
src/database/: __init__.py  base.py  base_model.py  connection_factory.py  db.py  db_connector.py  db_dependancies.py  duckdb_connection.py  models.py  postgresql_connection.py  root_schema.py
src/llm/: provider.py
src/route/: chat.py  namespace.py  namespace_table.py
src/scripts/: reload_ddl.py
tests/: test_database_config.py  test_settings.py  test_settings_basic.py
