[project]
name = "data-pilot"
version = "0.2.0"
description = "Data Platform Copilot is a GenAI-powered assistant that translates natural language questions into safe, validated SQL queries against your Data Warehouse."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb==1.3.2",
    "fastapi~=0.116",
    "granian==2.5.3",
    "httpx~=0.28",
    "openai~=1.107",
    "pandas==2.3.2",
    "pandas-stubs==2.3.2.250926",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator==6.1.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sqlalchemy==2.0.43",
    "starlette>=0.48.0",
    "tenacity==9.1.2",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
